[gd_scene load_steps=11 format=3 uid="uid://byxq7mctkx34p"]

[ext_resource type="PackedScene" uid="uid://bftnxisbnkcia" path="res://Entity/Entity.tscn" id="1_jpucl"]
[ext_resource type="PackedScene" uid="uid://8xtp8aj45q2" path="res://Character Animations/enemy_char.tscn" id="2_x4oa7"]
[ext_resource type="Texture2D" uid="uid://bccq71xrimdc6" path="res://UI/Progress Bar/Progress.png" id="3_fdx0e"]
[ext_resource type="Script" path="res://Enemy/EnemyController.gd" id="3_rsgx2"]
[ext_resource type="Texture2D" uid="uid://bgociksxtalc0" path="res://UI/Progress Bar/Over.png" id="4_pn5ap"]
[ext_resource type="Theme" uid="uid://d3l76yiraqpte" path="res://UI/Dialogue Box/fontDark.tres" id="5_pvf5d"]
[ext_resource type="LabelSettings" uid="uid://bhmp5hqfdr22" path="res://UI/Dialogue Box/labelDefaultTtile.tres" id="6_4iqai"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jnwvx"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8qqk0"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7nfl4"]
radius = 16.0

[node name="Enemy" instance=ExtResource("1_jpucl")]
collision_layer = 4

[node name="HealthComponent" parent="." index="0"]
position = Vector2(0, 0)

[node name="MovementComponent" parent="." index="1" node_paths=PackedStringArray("navAgent")]
position = Vector2(0, 0)
movement_speed = 35
navAgent = NodePath("../NavigationAgent2D")

[node name="EnemyController" type="Node2D" parent="." index="2"]
script = ExtResource("3_rsgx2")
attackDamage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
shape = SubResource("CircleShape2D_jnwvx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="4"]
path_desired_distance = 16.0
target_desired_distance = 30.0
path_max_distance = 32.0
path_postprocessing = 1
avoidance_enabled = true
radius = 8.0
neighbor_distance = 64.0

[node name="TexturehealthBar" type="TextureProgressBar" parent="." index="5"]
offset_left = -7.5
offset_top = -9.16667
offset_right = 24.5
offset_bottom = -1.16667
scale = Vector2(0.5, 0.5)
value = 10.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("3_fdx0e")
texture_over = ExtResource("4_pn5ap")
texture_progress = ExtResource("3_fdx0e")
tint_under = Color(0.623529, 0.552941, 0.498039, 1)
tint_over = Color(0.239216, 0.2, 0.2, 1)
tint_progress = Color(0.898039, 0, 0.164706, 1)

[node name="healthPercent" type="Label" parent="." index="6"]
offset_left = -8.0
offset_top = -13.0
offset_right = 33.0
offset_bottom = 30.0
scale = Vector2(0.236764, 0.278948)
theme = ExtResource("5_pvf5d")
text = "HP:"
label_settings = ExtResource("6_4iqai")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy_char" parent="." index="7" instance=ExtResource("2_x4oa7")]

[node name="Detection" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection" index="0"]
shape = SubResource("CircleShape2D_8qqk0")
debug_color = Color(0.454902, 0.560784, 0.560784, 0.419608)

[node name="AttackRange" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
shape = SubResource("CircleShape2D_7nfl4")
debug_color = Color(0.992157, 0, 0.254902, 0.419608)

[connection signal="navigation_finished" from="NavigationAgent2D" to="MovementComponent" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="MovementComponent" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_entered" from="Detection" to="EnemyController" method="_on_detection_area_entered"]
[connection signal="area_exited" from="Detection" to="EnemyController" method="_on_detection_area_exited"]
[connection signal="body_entered" from="Detection" to="EnemyController" method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="EnemyController" method="_on_detection_body_exited"]
[connection signal="area_entered" from="AttackRange" to="EnemyController" method="_on_attack_range_area_entered"]
[connection signal="area_exited" from="AttackRange" to="EnemyController" method="_on_attack_range_area_exited"]
[connection signal="body_entered" from="AttackRange" to="EnemyController" method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="EnemyController" method="_on_attack_range_body_exited"]
